# Robot

./: .gitignore  README.md
infrastructure/: .env  docker-compose.yml
infrastructure/grafana/: robot_dashboard.json  trade_stream_service_dashboard.json
infrastructure/loki/: loki-config.yaml
infrastructure/nginx/: nginx.conf
infrastructure/prometheus/: prometheus.yml
stateful/: .env  docker-compose.yml
stateless/: .env  docker-compose.yml
stateless/database_worker/: .env  Dockerfile  pyproject.toml
stateless/database_worker/src/: config.py  database.py  database_worker.py  main.py  models.py  orm.py
stateless/metrics_adapter/: .env  Dockerfile  pyproject.toml
stateless/metrics_adapter/src/: config.py  main.py  metrics_registry.py
stateless/promtail/: promtail-config.yaml
stateless/robot/: .env  Dockerfile  pyproject.toml
stateless/robot/src/: Indicators.py  Model.py  candle_worker.py  config.py  decision_makers.py  initializer.py  main.py  order_managers.py  position_managers.py  predictor.py  renko_builder.py  robot.py  ticker_processor.py
stateless/stream/: .env  Dockerfile  pyproject.toml
stateless/stream/src/: bybit_stream.py  config.py  main.py  settings.py
